# fast_uuid

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  LICENSE.txt  README.md  Rakefile  fast_uuid.gemspec
benchmarks/: v4
ext/fast_uuid/: Cargo.toml  extconf.rb
ext/fast_uuid/src/: lib.rs
lib/: fast_uuid.rb
lib/fast_uuid/: version.rb
sig/: fast_uuid.rbs
test/: test_fast_uuid.rb  test_helper.rb
