[package]
authors = ["Juanito Fatas <me@juanitofatas.com>"]
name = "fast_uuid"
version = "0.0.1"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
rb-sys = "0.9.30"
rb-allocator = "0.9.6"
magnus = { version = "0.3.2", features = ["rb-sys-interop"] }
uuid = { version = "1.1.2", features = ["v4"] }

